# deft-reversi-engine

./: .gitignore  Cargo.toml  LICENSE  README.md  tools.py
data/ffo_test/: end40.pos  end41.pos  end42.pos  end43.pos  end44.pos  end45.pos  end46.pos  end47.pos  end48.pos  end49.pos  end50.pos  end51.pos  end52.pos  end53.pos  end54.pos  end55.pos  end56.pos  end57.pos  end58.pos  end59.pos
data/log/ffo_test/: ffotest_20231011.txt  ffotest_20240203.txt  ffotest_20240208.txt
data/log/learn/: eval_training_log.txt
src/: __main.rs  ai.rs  bit.rs  board.js  board.rs  board_manager.rs  eval.rs  eval_for_learn.rs  eval_old.rs  eval_search.rs  eval_simple.rs  ffo_test.rs  game.rs  index.html  learn.rs  learn_old.rs  lib.rs  main.js  main.rs  mpc.rs  perfect_search.rs  perfect_solver.rs  search.rs  solver.rs  styles.css  t_table.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai.rs  board.rs  main.rs
tools/: linear_regression_for_mpc_eval_search.py  linear_regression_for_mpc_perfect_search.py  z_from_percent.py
