[package]
name = "deft_reversi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1"
rand = "0.8.5"
rand_xorshift = "0.3"

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1

[build]
rustflags = ["-Ctarget-cpu=native","-Ctarget-feature=+avx"]
