[package]
name = "deft_reversi_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# termion = "1"
rand = "0.8.5"
rand_xorshift = "0.3"
wasm-bindgen = "0.2.87"
getrandom = { version = "0.2", features = ["js"] }


[profile.release]
lto = true
panic = 'abort'
codegen-units = 1

[build]
rustflags = ["-Ctarget-cpu=native","-Ctarget-feature=+avx"]

[lib]
crate-type=["cdylib"]
