[package]
name = "deft_reversi_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
# termion = "1"
rand = "0.8.5"
rand_xorshift = "0.3"
serde = {version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"


[profile.release]
lto = true
panic = 'abort'
# codegen-units = 1


[build]
rustflags = ["-Ctarget-cpu=native"]

